fullSandbox11072023/force-app/main/default/objects/Take5__c/Take5__c.object-meta.xml
<CustomObject>
    <label>Take5</label>
    <nameField>
        <label>Take5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Take5s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>