fullSandbox11072023/force-app/main/default/objects/Take5__c/fields/Eligible_Start__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Start__c</fullName>
    <label>Eligible Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>