fullSandbox11072023/force-app/main/default/objects/Take5__c/fields/Eligible_Stop__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Stop__c</fullName>
    <label>Eligible Stop</label>
    <required>true</required>
    <type>Date</type>
</CustomField>