fullSandbox11072023/force-app/main/default/objects/Take5__c/fields/Qualified_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Business_Unit__c</fullName>
    <label>Qualified Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anesthesia/Respiratory</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cross BU</fullName>
            </value>
            <value>
                <fullName>Interventional Access</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Latin America Distributor</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>